# NEC-VE-Slurm-gres

./: Makefile.in  README.rst  configure  configure.ac
auxdir/: Makefile.in
contribs/: Makefile.in
contribs/cray/: Makefile.in
contribs/lua/: Makefile.in
contribs/mic/: Makefile.in
contribs/nss_slurm/: Makefile.in
contribs/openlava/: Makefile.in
contribs/pam/: Makefile.in
contribs/pam_slurm_adopt/: Makefile.in
contribs/perlapi/: Makefile.in
contribs/pmi/: Makefile.in
contribs/pmi2/: Makefile.in
contribs/seff/: Makefile.in
contribs/sgather/: Makefile.in
contribs/sgi/: Makefile.in
contribs/sjobexit/: Makefile.in
contribs/torque/: Makefile.in  pbsnodes.pl
doc/: Makefile.in
doc/html/: Makefile.in
doc/man/: Makefile.in
etc/: Makefile.in
slurm/: slurm.h.in
src/: Makefile.in
src/api/: Makefile.in
src/bcast/: Makefile.in
src/common/: Makefile.in  gres.c  slurm_opt.c
src/database/: Makefile.in
src/layouts/: Makefile.in
src/plugins/: Makefile.in
src/plugins/gres/ve/: Makefile.am  Makefile.in  gres_ve.c
src/sacct/: Makefile.in
src/sacctmgr/: Makefile.in
src/salloc/: Makefile.in
src/sattach/: Makefile.in
src/sbatch/: Makefile.in
src/sbcast/: Makefile.in
src/scancel/: Makefile.in
src/scontrol/: Makefile.in
src/sdiag/: Makefile.in
src/sinfo/: Makefile.in
src/slurmctld/: Makefile.in
src/slurmd/: Makefile.in
src/slurmdbd/: Makefile.in
src/smap/: Makefile.in
src/sprio/: Makefile.in
src/squeue/: Makefile.in
src/sreport/: Makefile.in
src/srun/: Makefile.in
testsuite/: Makefile.in
(+173 files in other folders)
